--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>LAL</title>
 </head>
 <body>
     <h1>Clase de frontend</h1>
+    <div>
+        <p>Probando Cosas randoms</p>
+    </div>
 
 
 
