--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>LAL</title>
+    <title>Counter Strike 1.6</title>
 </head>
 <body>
-    <h1>Clase de frontend</h1>
-    <div>
+    <div class="two">
+        <h1>Counter Strike
+          <span>1.6</span>
+        </h1>
+      </div>
+    <div class="pers">
         <h3>Probando Cosas randoms (ojala el profe no me cague a pedo)</h3>
     </div>
 
-    
-        <h2>
+    <h2 class="cs1">
             CS 1.6
-        </h2>
-    
-
-
+    </h2>
+    <a href="https://store.steampowered.com/app/10/CounterStrike/?l=spanish" target="_blank">
+    <button class="adq">Adquirir Juego</button>
+    </a>
 
 
 
