--- a/index.html
+++ b/index.html
@@ -13,14 +13,20 @@
         </h1>
       </div>
     <div class="pers">
-        <h3>Probando Cosas randoms (ojala el profe no me cague a pedo)</h3>
+        <h3>REMAKE OFICIAL DEL COUNTER STRIKE 1.6</h3>
     </div>
+    <p class="parrafo1">El legado de Counter-Strike 1.6 <br> sigue vivo gracias a CS: Legacy, un remake desarrollado desde cero por algunos de los <br> modders más experimentados de la comunidad. <br> Construido desde cero sobre el kit de desarrollo de software(SDK) de Source 2013, el proyecto busca recrear <br> fielmente la jugabilidad del clásico, pero con gráficos modernizados y mejoras técnicas.
 
-    <h2 class="cs1">
+     <br> Su llegada a Steam está prevista para <br> este año en acceso anticipado, pero aún queda la incógnita de si Valve permitirá su lanzamiento sin problemas.</p>
+    <img class="img-secun" src="Imagenes/6612144d47c8ba69ba05415e06643181.jpg" alt="">
+     <h2 class="cs1">
             CS 1.6
     </h2>
     <a href="https://store.steampowered.com/app/10/CounterStrike/?l=spanish" target="_blank">
-    <button class="adq">Adquirir Juego</button>
+      <button class="adq">Adquirir Juego</button>
+    </a>
+    <a href="https://es-us.finanzas.yahoo.com/noticias/anuncia-remake-counter-strike-1-185031502.html" target="_blank">
+      <button class="adkk">Lea La Noticia Aquí</button>
     </a>
 
 
